fixed main page alignment

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -149,10 +149,12 @@
 
 .pack-up-paragraph {
   font-family: 'Open Sans', sans-serif;
-  margin-top:-400px;
+  // margin-top:-300px;
+  // margin-left:-200px;
   float:left;
   position:relative;
   width:200px;
+  margin:0;
 }
 
 
@@ -161,7 +163,7 @@
   top:500px;
   height:350px;
   float:left;
-  margin-left:200px;
+  margin-left:50px;
 }
 
 .parallax_image_pack_up {
@@ -187,7 +189,7 @@
 
 
  .text-logo {
-   content:url('logopackapp.png');
+   content:url('https://s3-us-west-2.amazonaws.com/packapp/assets/logopackapp.png');
    margin-left:645px;
    margin-top:-10px;
    width:50%;
